# shafa

./: .gitignore  CMakeLists.txt  README.md  a.c  a.h  aaa.txt.cod  aaa.txt.freq  aaa.txt.rle  aaa.txt.rle.cod  aaa.txt.rle.freq  b.c  b.h  c.c  c.h  d.h  dados.c  dados.h  fsize.h  main  main.c  shafa  utils.c  utils.h
Common/: dados.c  dados.h  debug.c  debug.h  utils.c  utils.h
ModuloA/: a.c  a.h
ModuloB/: b.c  b.h
ModuloC/: c.c  c.h
ModuloD/: d.c  d.h
